// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when validating decimal property with minimum value greater than maximum value should have validation failures 1`] = `"decimal DecimalIdentity has min value greater than max value."`;

exports[`when validating decimal property with minimum value greater than maximum value should have validation failures 2`] = `
Object {
  "column": 6,
  "line": 11,
  "tokenText": "min value",
}
`;

exports[`when validating decimal property with minimum value greater than maximum value should have validation failures 3`] = `"decimal DecimalProperty has min value greater than max value."`;

exports[`when validating decimal property with minimum value greater than maximum value should have validation failures 4`] = `
Object {
  "column": 6,
  "line": 19,
  "tokenText": "min value",
}
`;
